small fix in v1

--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
             height="100" style="border-radius: 50%;">
         <h1 class="h3 mb-3 font-weight-normal">Please sign up here</h1>
         <input type="email" class="form-control" placeholder="Email address" name="mailId" required autofocus>
-        <input type="email" class="form-control" placeholder="First Name" name="fName" required>
+        <input type="text" class="form-control" placeholder="First Name" name="fName" required>
         <input type="text" class="form-control" placeholder="Last Name" name="lName" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
         <p class="mt-5 mb-3 text-muted">&copy; Akash Parmar & Co.</p>
