--- a/successful.html
+++ b/successful.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-    <title>Sticky Footer Template for Bootstrap</title>
+    <title>Yay!</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/">
 
