--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
         <input type="text" class="form-control" placeholder="First Name" name="fName" required>
         <input type="text" class="form-control" placeholder="Last Name" name="lName" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-        <p class="mt-5 mb-3 text-muted">&copy; Akash Parmar & Co.</p>
+        <p class="mt-5 mb-3 text-muted">&copy; Akash Parmar, 2022</p>
     </form>
 </body>
 
